--- a/cava/Web.config
+++ b/cava/Web.config
@@ -19,20 +19,21 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="CavaAdminEmail" value="administracion@cavarestobar.com" />
-    <add key="adminEmail" value="pavr1@hotmail.com" />
+    <add key="SupportAdminEmail" value="pavr1@hotmail.com" />
     <!--"no-reply@cavarestobar.com"-->
     <add key="MailHost" value="mail.cavarestobar.com" />
-    <add key="MailPort" value="8889" />
-    <add key="NotificationsUser" value="administracion@cavarestobar.com" />
-    <add key="NotificationsPassword" value="villaPab1234!" />
+    <add key="MailPort" value="25" />
+    <add key="CavaAdminEmail" value="administracion@cavarestobar.com" />
+    <add key="CavaAdminEmailPwd" value="villaPab1234!" />
+    <add key="reservationEmail" value="reservaciones@cavarestobar.com"/>
+    <add key="reservationEmailPwd" value="villaPab1234!" />
     <add key="WhatsappLink" value="https://wa.me/" />
     <add key="WhatsappPhone" value="+50688012201" />
     <add key="WhatsappMessage" value="Hola Cava!" />
-    <add key="FacebookLink" value="https://facebook.com" />
-    <add key="InstagramLink" value="" />
+    <add key="FacebookLink" value="https://www.facebook.com/cavarest" />
+    <add key="InstagramLink" value="https://www.instagram.com/cavarestobar/?hl=es-la" />
     <add key="Schedules" value="MARTES A SÁBADO DESDE LAS 12:00 MD|DOMINGO BRUNCH 11:00 AM - 4:00 PM" />
-    <add key="BriefDescription" value="Nuestro arte culinario es internacional , trabajamos con los cinco sentidos entre ahumados de raíces curativas  y sabores regionales muchas veces ya olvidados en las cocinas actuales .                 Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables . Reinterprétamos la variedad de ideas y las evolucionamos , pero tenemos las raíces puestas en la historia y la mística                 El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia  y métodos de cocción mixtos utilizando insumos etnicos oriundos de CR" />
+    <add key="BriefDescription" value="Nuestro arte culinario es internacional, trabajamos con los cinco sentidos entre ahumados de raíces curativas y sabores regionales muchas veces ya olvidados en las cocinas actuales. Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables. Reinterpretamos la variedad de ideas y las evolucionamos, pero tenemos las raíces puestas en la historia y la mística. El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia y métodos de cocción mixtos utilizando insumos étnicos oriundos de Costa Rica." />
     <add key="ReservationReasons" value="CUMPLEAÑOS|CORPORATIVO|EVENTO PRIVADO" />
   </appSettings>
   <system.web>
@@ -41,6 +42,17 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="https://{HTTP_HOST}/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
