--- a/cava/cava.csproj
+++ b/cava/cava.csproj
@@ -4375,6 +4375,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\notify.js" />
+    <Content Include="Scripts\pleaseRotate.js" />
     <Content Include="Scripts\popper-utils.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
