--- a/cava/Web.config
+++ b/cava/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--local-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
     <!--production-->
-    <add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -23,8 +23,8 @@
     <!--"no-reply@cavarestobar.com"-->
     <add key="MailHost" value="mail.cavarestobar.com" />
     <add key="MailPort" value="25" />
-    <add key="CavaAdminEmail" value="administracion@cavarestobar.com" />
-    <add key="CavaAdminEmailPwd" value="villaPab1234!" />
+    <add key="CavaAdminEmail" value="mariajose@cavarestobar.com" />
+    <add key="CavaAdminEmailPwd" value="villaPab1234!" /> <!--Not in use, only for reference-->
     <add key="reservationEmail" value="reservaciones@cavarestobar.com"/>
     <add key="reservationEmailPwd" value="villaPab1234!" />
     <add key="WhatsappLink" value="https://wa.me/" />
