Set email as optional. Besides added NotifyUserActions in config

--- a/cava/Web.config
+++ b/cava/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--local-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
     <!--production-->
-    <add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -35,6 +35,7 @@
     <add key="Schedules" value="MARTES A SÁBADO DESDE LAS 12:00 MD|DOMINGO BRUNCH 11:00 AM - 4:00 PM" />
     <add key="BriefDescription" value="Nuestro arte culinario es internacional, trabajamos con los cinco sentidos entre ahumados de raíces curativas y sabores regionales muchas veces ya olvidados en las cocinas actuales. Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables. Reinterpretamos la variedad de ideas y las evolucionamos, pero tenemos las raíces puestas en la historia y la mística. El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia y métodos de cocción mixtos utilizando insumos étnicos oriundos de Costa Rica." />
     <add key="ReservationReasons" value="CUMPLEAÑOS|CORPORATIVO|EVENTO PRIVADO" />
+    <add key="NotifyUserActions" value="false" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
