Changes applied for available range hours

--- a/cava/Web.config
+++ b/cava/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--local-->
-    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=cava;Trusted_Connection=true;" providerName="System.Data.SqlClient" />-->
     <!--production-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A46442_cava;User Id=DB_A46442_cava_admin;Password=villaPab1234!" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -33,6 +33,10 @@
     <add key="FacebookLink" value="https://www.facebook.com/cavarest" />
     <add key="InstagramLink" value="https://www.instagram.com/cavarestobar/?hl=es-la" />
     <add key="Schedules" value="MARTES A SÁBADO DESDE LAS 12:00 MD|DOMINGO BRUNCH 11:00 AM - 4:00 PM" />
+    <add key="NoneWorkingWeekDays" value=",1," /><!--Comma separated: 0=sun, 1=mon, 2=tue, 3=wed, 4=thur, 5=fri, 6=sat-->
+    <add key="WeekHours" value="12:00,12:30,13:00,13:30,14:00,14:30,15:00,15:30,16:00,16:30,17:00,17:30,18:00,18:30,19:00,19:30,20:00,20:30,21:00,21:30,22:00,22:30,23:00" />
+    <add key="SaturdayHours" value="12:00,12:30,13:00,13:30,14:00,14:30,15:00,15:30,16:00,16:30,17:00,17:30,18:00,18:30,19:00,19:30,20:00,20:30,21:00,21:30,22:00,22:30,23:00" />
+    <add key="SundayHours" value="12:00,12:30,13:00,13:30,14:00,14:30,15:00" />
     <add key="BriefDescription" value="Nuestro arte culinario es internacional, trabajamos con los cinco sentidos entre ahumados de raíces curativas y sabores regionales muchas veces ya olvidados en las cocinas actuales. Nos reinventamos y aportamos nuestro conocimiento en técnicas culinarias ancestrales y contemporáneas para alcanzar sabores únicos inigualables. Reinterpretamos la variedad de ideas y las evolucionamos, pero tenemos las raíces puestas en la historia y la mística. El legado culinario de CAVA marca una nueva forma de utilizar tecnólogia y métodos de cocción mixtos utilizando insumos étnicos oriundos de Costa Rica." />
     <add key="ReservationReasons" value="CUMPLEAÑOS|CORPORATIVO|EVENTO PRIVADO" />
     <add key="NotifyUserActions" value="false" />
